[package]
name = "concept-db"
version = "0.1.0"
authors = ["Jeff Peterson <jeff@yak.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.2.0"
nom = "5.1.2"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
im = "15.0.0"
clap = "2.33.1"
